--- a/Método-Cãoportado.css
+++ b/Método-Cãoportado.css
@@ -1,5 +1,5 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 1053px;
+  min-height: 1065px;
 }
 
 .u-section-1 .u-image-1 {
@@ -9,14 +9,14 @@
 }
 
 .u-section-1 .u-text-1 {
-  font-size: 1.5rem;
+  font-size: 1.875rem;
   line-height: 1.25;
-  width: 706px;
+  width: 813px;
   margin: 20px auto 0;
 }
 
 .u-section-1 .u-text-2 {
-  font-size: 1.25rem;
+  font-size: 1.5rem;
   line-height: 1.25;
   font-style: italic;
   width: 532px;
@@ -30,28 +30,96 @@
 }
 
 @media (max-width: 1199px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 975px;
+  }
+
   .u-section-1 .u-image-1 {
-    margin-top: -40px;
+    margin-top: 25px;
+  }
+
+  .u-section-1 .u-text-1 {
+    width: auto;
+    margin-top: 25px;
+    margin-right: 77px;
+    margin-left: 50px;
+  }
+
+  .u-section-1 .u-text-2 {
+    width: 574px;
+    margin-top: 25px;
   }
 
   .u-section-1 .u-custom-html-1 {
-    margin-right: 0;
+    min-height: 529px;
+    margin-top: 40px;
+    margin-bottom: 50px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 954px;
+  }
+
+  .u-section-1 .u-text-1 {
+    font-size: 1.5rem;
     margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-text-2 {
+    font-size: 1.25rem;
+  }
+
+  .u-section-1 .u-custom-html-1 {
+    margin-top: 35px;
+    margin-bottom: 60px;
+    margin-right: initial;
+    margin-left: initial;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-1 .u-text-1 {
+  .u-section-1 .u-sheet-1 {
+    min-height: 974px;
+  }
+
+  .u-section-1 .u-text-2 {
     width: 540px;
   }
 }
 
 @media (max-width: 575px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 599px;
+  }
+
+  .u-section-1 .u-image-1 {
+    height: 70px;
+    margin-top: 15px;
+  }
+
   .u-section-1 .u-text-1 {
-    width: 340px;
+    font-size: 1.25rem;
+    margin-top: 15px;
   }
 
   .u-section-1 .u-text-2 {
-    width: 340px;
+    font-size: 1.125rem;
+    width: auto;
+    margin-top: 15px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-custom-html-1 {
+    min-height: 191px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    margin-right: initial;
+    margin-left: initial;
   }
 }
