--- a/caoportado.css
+++ b/caoportado.css
@@ -32,8 +32,11 @@
   margin: 34px auto 0;
 }
 
+#pitchzera{
+display: none;
+}
+
 .u-section-1 .u-btn-1 {
-  display: none;
   letter-spacing: 1px;
   font-size: 1.5rem;
   background-image: none;
