--- a/css/index.css
+++ b/css/index.css
@@ -4,41 +4,33 @@ h1 {
 
 @media (min-width: 481px) {
     h1 {
-        font-size: 26px;
-        margin-left: 2rem;
-        margin-right: 2rem;
-    }
-}
-
-@media (min-width: 769px) {
-    h1 {
-        font-size: 26px;
-        margin-left: 4rem;
-        margin-right: 4rem;
+        font-size: 28px;
         padding-left: 1rem;
         padding-right: 1rem;
     }
 }
 
+@media (min-width: 769px) {
+    h1 {
+        font-size: 32px;
+        padding-left: 4rem;
+        padding-right: 4rem;
+    }
+}
+
 @media (min-width: 1025px) {
     h1 {
-        margin-left: 10rem;
-        margin-right: 10rem;
         padding-left: 5rem;
-        padding-right: 5rem;
-        font-size: 30px;
+        padding-right: 5em;
+        font-size: 35px;
     }
 }
 
 @media (min-width: 1281px) {
     h1 {
         font-size: 35px;
-        margin-left: 15rem;
-        margin-right: 15rem;
-        padding-left: 12rem;
-        padding-right: 12rem;
-        margin-top: 4rem;
-        color: #00000f;
+        padding-left: 26rem;
+        padding-right: 26rem;
     }
 }
 
@@ -48,9 +40,7 @@ h2 {
 
 @media (min-width: 481px) {
     h2 {
-        font-size: 22px;
-        margin-left: 2rem;
-        margin-right: 2rem;
+        font-size: 25px;
         padding-left: 1rem;
         padding-right: 1rem;
     }
@@ -58,30 +48,24 @@ h2 {
 
 @media (min-width: 769px) {
     h2 {
-        font-size: 24px;
-        margin-left: 4rem;
-        margin-right: 4rem;
-        padding-left: 2rem;
-        padding-right: 2rem;
+        font-size: 28px;
+        padding-left: 5rem;
+        padding-right: 5rem;
     }
 }
 
 @media (min-width: 1025px) {
     h2 {
-        margin-left: 10rem;
-        margin-right: 10rem;
         padding-left: 6rem;
         padding-right: 6rem;
-        font-size: 26px;
+        font-size: 28px;
     }
 }
 
 @media (min-width: 1281px) {
     h2 {
         font-size: 28px;
-        padding-left: 15rem;
-        padding-right: 15rem;
-        margin-left: 15rem;
-        margin-right: 15rem;
+        padding-left: 22rem;
+        padding-right: 22rem;
     }
 }
